--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,34 @@
   font-display: swap;
 }
 
+/* ChironGoRoundTC шрифты */
+@font-face {
+  font-family: 'ChironGoRoundTC';
+  src: url('/fonts/ChironGoRoundTC-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ChironGoRoundTC';
+  src: url('/fonts/ChironGoRoundTC-VariableFont_wght.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Дополнительные CSS классы для шрифтов */
+.font-chiron-heading {
+  font-family: 'ChironGoRoundTC', sans-serif !important;
+  font-weight: 800 !important;
+}
+
+.font-chiron-body {
+  font-family: 'ChironGoRoundTC', sans-serif !important;
+  font-weight: 400 !important;
+}
+
 /* Скрытый скроллбар для горизонтального скролла игр */
 .games-scroll {
   scrollbar-width: none;  /* Firefox */
