--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,17 @@ html, body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+/* Cloud Animation */
+@keyframes cloudMove {
+  from {
+    background-position: 100% 0;
+  }
+  to {
+    background-position: -100% 0;
+  }
+}
+
+.cloud-animation {
+  animation: cloudMove 20s linear infinite;
+}
